News
====

.. contents::

1.2
---

* Added :class:`formencode.validators.IPAddress`, validating IP
  addresses, from Leandro Lucarella.

* Added :meth:`formencode.api.Invalid.__unicode__`

* In :mod:`formencode.htmlfill` use a default encoding of utf8 when
  handling mixed ``str``/``unicode`` content.  Also do not modify
  ``<input type="image">`` tags (previously ``src`` would be
  overwritten, for no good reason).

* In :class:`formencode.validators.Email` allow single-character
  domain names (like x.com).

* Make :class:`formencode.validators.FieldsMatch` give a normal
  ``Invalid`` exception if you pass it a non-dictionary.  Also treat
  all missing keys as the empty string (previously the first key was
  required and would raise KeyError).

* :class:`formencode.validators.Number` works with ``inf`` float
  values (before it would raise a OverflowError).
  
* The ``tw`` locale has been renamed to the more standard ``zh_TW``.

* Added Japanese and Turkish translations.

* Fixed some outdated translations and errors in Spanish and Greek
  translations. Translations now managed with `Babel
  <http://babel.edgewall.org/>`_.

1.1
---

* Fixed the ``is_empty()`` method in
  :class:`formencode.validators.FieldStorageUploadConverter`; 
  previously it returned the opposite of the intended result.

* Added a parameter to ``htmlfill.render()``: ``prefix_error``.  If
  this parameter is true (the default) then errors automatically go
  before the input field; if false then they go after the input field.

* Remove deprecated modules: ``fields``, ``formgen``, ``htmlform``,
  ``sqlformgen``, and ``sqlschema``.

* Added ``formencode.htmlrename``, which renames HTML inputs.

* In ``formencode.htmlfill``, non-string values are compared usefully
  (e.g., a select box with integer values).

* The validators ``Int`` and ``Number`` both take min/max arguments
  (from Shannon Behrens).

* Validators based on ``formencode.validators.FormValidator`` will not